--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask>=0.10.1
--e git://github.com/coleifer/peewee.git@c6294f35507424eefbf84d466fd2d32bd72710c8#egg=peewee
+peewee>=2.1.4
 flask-peewee>=0.6.5
 python-ldap>=2.4.12
-MySQL-python>=1.2.4
+PyMySQL>=0.5
 lxml>=3.2.1
 html5lib>=1.0b1
 beautifulsoup4>=4.2.1
