Use mysql-python version Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask>=0.10.1
 peewee>=2.1.4
 flask-peewee>=0.6.5
 python-ldap>=2.4.12
-PyMySQL>=0.5
+MySQL-python>=1.2.4
 lxml>=3.2.1
 html5lib>=1.0b1
 beautifulsoup4>=4.2.1
